<resources>
    <string name="app_name">Videogames</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_register">Register</string>
    <string name="text_login">Login</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_add">Add</string>
    <string name="text_Genres">Genres: </string>
    <string name="text_Platforms">Platforms: </string>
    <string name="text_Metacritic">Metacritic: </string>
    <string name="hint_firstname">Firstname</string>
    <string name="hint_lastname">Lastname</string>
    <string name="hint_email">Email</string>
</resources>